--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,13 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+	<% if(loggedIn) { %>
+		<span>Logged in as: </span> <%= currentUser.name %>
+		<% } else { %>
+			<a href="/users/login">Log In</a>
+			<a href="/users/signup">Sign Up</a>
+			<% } %>
+
 	<div class="container">
 		<%- body %>
 	</div>
